fix: Resolve colour contrast nav menu & orange btn
This commit fixes an issue raised by lighthouse tool for colour contrast
 in the accessibility report. The issues raised was the inactive
 navigation menu items was too dark against the background and the
 orange call to action buttons didn't meet the contrast standards.

 To resolve this the colour of the inactive menu items was adjusted to
 be slightly brighter.

 The orange buttons contrast issue has been documented in the readme
 however this commit adjusts the colour and font size to assist with
 this issue.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,12 +28,13 @@
 .btn-orange {
     background-color: #fd650d;
     border-color: #ce713b;
-    color: #ececec;
+    color: #fff; 
+    font-weight: 500;
 }
 
 .btn-orange:hover {
     background-color: #ff7b00;
-    color: #ececec;
+    color: #fff; 
 }
 
 /*** 5.0 - Header ***/
@@ -41,6 +42,10 @@
     font-size: 40px;
     line-height: 25px;
     vertical-align: middle;
+}
+
+.navbar-dark .navbar-nav .nav-link {
+    color: rgba(255,255,255,.75);
 }
 
 @media (min-width: 992px) {
